--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -5,7 +5,40 @@ body {
   font-family: 'Cairo', sans-serif !important;
 }
 
-
 a, button {
   font-family: 'Cairo', sans-serif;
+  text-transform: capitalize;
+}
+
+.nav-link{
+  text-transform: capitalize;
+}
+.product-card{
+  overflow: hidden;
+}
+
+.product-card img {
+  transition: 1s;
+}
+
+.product-card:hover img {
+  transform: scale(1.1)
+}
+
+h1.page-title{
+  margin: .75rem 0;
+}
+
+html[dir="rtl"] input[type=email], 
+html[dir="rtl"] input[type=number], 
+html[dir="rtl"] input[type=tel], 
+html[dir="rtl"] input[type=url] {
+  direction: rtl;
+}
+
+html[dir="ltr"] input[type=email], 
+html[dir="ltr"] input[type=number], 
+html[dir="ltr"] input[type=tel], 
+html[dir="ltr"] input[type=url] {
+  direction: ltr;
 }
