--- a/src/app/[lang]/globals.css
+++ b/src/app/[lang]/globals.css
@@ -5,15 +5,17 @@ body {
   font-family: 'Cairo', sans-serif !important;
 }
 
-a, button {
+a,
+button {
   font-family: 'Cairo', sans-serif;
   text-transform: capitalize;
 }
 
-.nav-link{
+.nav-link {
   text-transform: capitalize;
 }
-.product-card{
+
+.product-card {
   overflow: hidden;
 }
 
@@ -25,20 +27,235 @@ a, button {
   transform: scale(1.1)
 }
 
-h1.page-title{
+h1.page-title {
   margin: .75rem 0;
 }
 
-html[dir="rtl"] input[type=email], 
-html[dir="rtl"] input[type=number], 
-html[dir="rtl"] input[type=tel], 
+html[dir="rtl"] input[type=email],
+html[dir="rtl"] input[type=number],
+html[dir="rtl"] input[type=tel],
 html[dir="rtl"] input[type=url] {
   direction: rtl;
 }
 
-html[dir="ltr"] input[type=email], 
-html[dir="ltr"] input[type=number], 
-html[dir="ltr"] input[type=tel], 
+html[dir="ltr"] input[type=email],
+html[dir="ltr"] input[type=number],
+html[dir="ltr"] input[type=tel],
 html[dir="ltr"] input[type=url] {
   direction: ltr;
 }
+
+
+.form-container {
+  position: relative;
+  width: 768px;
+  max-width: 100%;
+  height: 580px;
+  max-height: 580px;
+  background-color: #FFF;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25),
+    0 10px 10px rgba(0, 0, 0, 0.22);
+  margin: 1rem auto;
+  padding: 10px;
+
+}
+
+.sign-up,
+.sign-in {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  transition: .6s;
+}
+
+.sign-up {
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.sign-in {
+  width: 50%;
+  z-index: 2;
+}
+
+.sign-in form,
+.sign-up form {
+  background-color: #FFF;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 50px;
+  height: 100%;
+  text-align: center;
+}
+
+.form-container h2 {
+  font-weight: bold;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.form-container p {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: .5px;
+  margin: 15px 0 20px;
+  text-transform: capitalize;
+
+}
+
+.form-container input {
+  background-color: #EEE;
+  padding: 12px 15px;
+  margin: 8px 15px;
+  width: 100%;
+  border-radius: 5px;
+  border: none;
+  outline: 0;
+}
+
+.form-container a {
+  color: #333;
+  font-size: 14px;
+  text-decoration: none;
+  margin: 15px 0;
+}
+
+.form-container button.btn-submit {
+  color: #FFF;
+  background-color: #404040;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 12px 55px;
+  margin: 20px;
+  border-radius: 20px;
+  border: 1px solid #404040;
+  outline: none;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  transition: transform .03s ease-in;
+  cursor: pointer;
+}
+
+.form-container button.btn-submit:active {
+  transform: scale(.90);
+}
+
+#sign-in,
+#sign-up {
+  background-color: transparent;
+  border: 2px solid #FFF;
+}
+
+.form-container.right-panel-active .sign-in {
+  transform: translateX(100%);
+}
+
+.form-container.right-panel-active .sign-up {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+}
+
+.overlay-container {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  width: 50%;
+  height: 100%;
+  overflow: hidden;
+  transition: transform 0.6s ease-in-out;
+  z-index: 100;
+}
+
+
+.form-container.right-panel-active .overlay-container {
+  transform: translateX(-100%);
+
+}
+
+.overlay {
+  position: relative;
+  color: #FFF;
+  background-color: #FF416C;
+  left: -100%;
+  height: 100%;
+  width: 200%;
+  /* background: linear-gradient(to right, #FF4B28, #FF228C); */
+  /* background: linear-gradient(to right, #BFBFBF, #404040); */
+  background: #404040;
+  transform: translateX(0);
+  transition: transform .6s ease-in-out;
+}
+
+.form-container.right-panel-active .overlay {
+  transform: translateX(50%);
+}
+
+.overlay-left,
+.overlay-right {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  top: 0;
+  height: 100%;
+  width: 50%;
+  transform: translateX(0);
+  transition: transform .6s ease-in-out;
+
+}
+
+.overlay-left {
+  transform: translateX(-20%);
+}
+
+.overlay-right {
+  right: 0;
+  transform: translateX(0);
+}
+
+.form-container.right-panel-active .overlay-left {
+  transform: translateX(0);
+}
+
+.form-container.right-panel-active .overlay-right {
+  transform: translateX(20%);
+}
+
+.social-container {
+  margin: 20px 0;
+}
+
+.social-container button {
+  height: 50px;
+  width: 50px;
+  margin: 0 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #CCC;
+  border-radius: 50%;
+  font-size: 22px;
+}
+
+.social-container button.facebook {
+  color: #1877F2
+}
+
+.social-container button.google {
+  color: #EA4335
+}
+
+
+/* #ea4335 */
+/* #1877f2 */
